--- a/startsg.local.example
+++ b/startsg.local.example
@@ -1,4 +1,4 @@
-export XILINX_PATH=/opt/Xilinx/Vivado/2016.2
-export MATLAB_PATH=/usr/local/MATLAB/R2016b
-export PLATFORM=lin64
+export XILINX_PATH=/mnt/c/Xilinx/Vivado/2018.2
+export PLATFORM=win64
 export JASPER_BACKEND=vivado
+export MATLAB_PATH=/mnt/c/MATLAB/R2018a
